trying to fix alignment of social links

--- a/style.css
+++ b/style.css
@@ -18,11 +18,11 @@ html {
 
 body {
   background-color: #EDE9E9;
-  font-family: 'Arvo' serif;
+  font-family: 'Arvo'serif;
   color: #242D2D;
 }
 
-p{
+p {
   color: #242d2d;
   font-size: 1rem;
   font-weight: 400;
@@ -144,38 +144,33 @@ a:active {
   text-align: center;
 }
 
-.logo{
-
-display: flex;
-flex-direction: row;
-justify-content: flex-start
+.logo {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start
 }
 
 .logo img {
-max-width: 30px;
-margin-right: 5px;
-margin-left: 15px;
+  max-width: 30px;
+  margin-right: 5px;
+  margin-left: 15px;
 }
 
 .logo a {
-text-decoration: none;
-margin-top: 25px;
-
+  text-decoration: none;
+  margin-top: 25px;
 }
 
-@media only screen and (min-width: 640px){
-.logo{
+@media only screen and (min-width: 640px) {
+  .logo {
+    display: flex;
+    flex-direction: row;
+    justify-content: center
+  }
 
-display: flex;
-flex-direction: row;
-justify-content: center
-
-}
-
-.logo img {
-margin-left: 0px;
-}
-
+  .logo img {
+    margin-left: 0px;
+  }
 }
 
 header {
@@ -214,65 +209,67 @@ nav>ul>li>a {
   color: #4F6869;
 }
 
-.list{
+.list {
   text-align: left;
 }
 
-img.resize{
+img.resize {
   max-width: 30%;
   max-height: 30%;
 }
 
 @media only screen and (min-width: 640px) {
-
 }
 
 @media only screen and (min-width: 1024px) {
   header {
-  text-align: unset;
-  padding: 20px 0 13px;
-}
-nav{
-  width: auto;
-  float: right;
-  margin-top: 4px;
-}
-.col-md-6 {
-  width: 50%;
-}
+    text-align: unset;
+    padding: 20px 0 13px;
+  }
 
+  nav {
+    width: auto;
+    float: right;
+    margin-top: 4px;
+  }
+
+  .col-md-6 {
+    width: 50%;
+  }
 }
 
 @media only screen and (min-width: 1440px) {
   header {
-  text-align: unset;
-  padding: 20px 0 13px;
-}
-nav{
-  width: auto;
-  float: right;
-  margin-top: 4px;
-}
-.col-md-6 {
-  float: left;
-  width: 40%;
-}
+    text-align: unset;
+    padding: 20px 0 13px;
+  }
 
-.col-lg-7 {
-  float: right;
-  width: 60%;
-}
+  nav {
+    width: auto;
+    float: right;
+    margin-top: 4px;
+  }
 
-.col-lg-5 {
-  float: right;
-  width: 60%;
-}
+  .col-md-6 {
+    float: left;
+    width: 40%;
+  }
 
-.container {
-  max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
-}
+  .col-lg-7 {
+    float: right;
+    width: 60%;
+  }
+
+  .col-lg-5 {
+    float: right;
+    width: 60%;
+  }
+
+  .container {
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 [class*="col-"] {
@@ -280,7 +277,7 @@ nav{
   padding: 10px;
 }
 
-.row::after{
+.row::after {
   content: "";
   clear: both;
   display: table;
@@ -288,4 +285,76 @@ nav{
 
 #about-page h3 {
   margin-top: 0;
+}
+
+#about-picture {
+  width: 100%;
+  max-width: 100%;
+  height: auto;
+}
+
+.social {
+  max-width: 40px;
+  max-height: 40px;
+  display: table;
+  justify-content: center;
+}
+
+/* animation @keyframes tells how then .element tells what*/
+@keyframes color-change {
+  0% {
+    fill: #edc655;
+  }
+
+  50% {
+    fill: #fcffad;
+  }
+
+  100% {
+    fill: #f76414;
+  }
+}
+
+.sun {
+  animation-duration: 4s;
+  animation-name: color-change;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-timing-function: linear;
+}
+
+@keyframes cloud-move {
+  from {
+    transform: translate(0, 50px);
+  }
+
+  to {
+    transform: translate(200px, 50px);
+  }
+}
+
+.cloud-front {
+  animation-duration: 15s;
+  animation-name: cloud-move;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-timing-function: linear;
+}
+
+@keyframes cloud-move-reverse {
+  from {
+    transform: translate(446px, 48px);
+  }
+
+  to {
+    transform: translate(100px, 48px);
+  }
+}
+
+.cloud-back {
+  animation-duration: 30s;
+  animation-name: cloud-move-reverse;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+  animation-timing-function: linear;
 }
